# ImageProcessingApp

./: CMakeLists.txt
src/: filter.cpp  filter.h  image_processing.cpp  image_processing.h  main.cpp
tests/: example_test.cpp
